--- a/.github/publishghcr.yml
+++ b/.github/publishghcr.yml
@@ -4,7 +4,7 @@ jobs:
 publish-hello-docker-image:
 runs-on: ubuntu-latest
 steps:
-- uses: actions/checkout@v2 
+  uses: actions/checkout@v2 
 - name: Login to GitHub Container Registry
   uses: docker/login-action@v1
   with:
