--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,25 @@
 name: publish
-on: [push]
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-publish-hello-docker-image:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v2
-- name: Login to GitHub Container Registry
-  uses: docker/login-action@v1
-  with:
-   registry: ghcr.io
-   username: ${{ github.actor }}
-   password: ${{ secrets.HUB_TOKEN }}
-- name: Build the hello-docker Docker image
-run: |
-       docker build . --tag ghcr.io/rumeshmega/hello-docker-gcr-demo:latest
-       docker run ghcr.io/rumeshmega/hello-docker-gcr-demo:latest
-       docker push ghcr.io/rumeshmega/hello-docker-gcr-demo:latest
+  publish-hello-docker-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }} # Use GITHUB_TOKEN instead of HUB_TOKEN
+
+      - name: Build the hello-docker Docker image
+        run: |
+          docker build . --tag ghcr.io/rumeshmega/hello-docker-gcr-demo:latest
+          docker run ghcr.io/rumeshmega/hello-docker-gcr-demo:latest
+          docker push ghcr.io/rumeshmega/hello-docker-gcr-demo:latest
