--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }} # Use GITHUB_TOKEN instead of HUB_TOKEN
+          password: ${{ secrets.HUB_TOKEN }} # Use GITHUB_TOKEN instead of HUB_TOKEN
 
       - name: Build the hello-docker Docker image
         run: |
